--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "team09-back",
-  "version": "1.0.0",
-  "description": "Iteration 1 Logic Drawing",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/isis3710-uniandes/Team09-back.git"
-  },
-  "author": "James Lake / Jose Daniel Cardenas",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/isis3710-uniandes/Team09-back/issues"
-  },
-  "homepage": "https://github.com/isis3710-uniandes/Team09-back#readme",
+  "name": "front",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "node-gyp": "^3.8.0",
-    "sequelize": "^4.42.1",
-    "sequelize-cli": "^5.4.0",
-    "nodemon": "^1.18.10",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
-    "sqlite": "^3.0.2",
-    "sqlite3": "^4.0.6"
-  }
+    "axios": "^0.18.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-scripts": "2.1.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
