--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "uws": "^100.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
