Canvas persists. Small issue with drawing not allowing anymore drawings

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.18.0",
+    "canvg": "^1.5.3",
     "express": "^4.16.4",
+    "imagetracerjs": "^1.2.5",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
