--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
+    "react-intl": "^2.8.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "uws": "^100.0.1"
