--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "canvg": "^1.5.3",
     "express": "^4.16.4",
+    "history": "^4.9.0",
     "imagetracerjs": "^1.2.5",
     "react": "^16.8.5",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8",
     "react-intl": "^2.8.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "uws": "^100.0.1"
