--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "canvg": "^1.5.3",
     "express": "^4.16.4",
+    "hash.js": "^1.1.7",
     "history": "^4.9.0",
     "imagetracerjs": "^1.2.5",
     "react": "^16.8.5",
